Update index (1).html dari web
update

--- a/index (1).html
+++ b/index (1).html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Profil Perusahaan GemTar</title>
+    <title>Profil galeri seni</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,8 +11,8 @@
     <!-- Header dan Navigasi -->
     <header>
         <div class="logo">
-            <img src="img/Logo1.jpg" alt="Logo Profil Perusahaan GemTar">
-            <h1>Profil Perusahaan GemTar</h1> <!-- img/Logo.jpg --> 
+            <img src="img/img/WhatsApp Image 2024-10-31 at 22.57.36.jpeg" alt="Logo Profil Perusahaan GemTar">
+            <h1>Profil galeri seni</h1> <!-- img/Logo.jpg --> 
         </div>
         <nav>
             <ul>
@@ -31,10 +31,10 @@
         <!-- Bagian Beranda -->
         <section id="beranda" class="section">
             <div class="hero">
-                <img src="img/Gedung.jpg" alt="Jadikan Mimpimu Nyata">
+                <img src="img/img/WhatsApp Image 2024-10-31 at 22.57.36.jpeg" alt="Jadikan Mimpimu Nyata">
                 <div class="hero-text">
                     <h2>Beranda</h2>
-                    <p>Layanan 24 Jam</p>
+                    <p></p>
                 </div>
             </div>
         </section>
@@ -42,7 +42,7 @@
         <!-- Bagian Profil -->
         <section id="profil" class="section">
             <h2>Profil</h2>
-            <p>Selamat Datang di Perusahaan Kami, sebuah Agen resmi dalam dunia turnamen game online. Kami memberikan pelayanan yang optimal dan maksimal, agar Anda dapat merasakan manfaatnya. Pelayanan yang terjamin murah, membuat Anda puas dengan kegiatan jelajahi dunia game Anda. Selamat Menikmati....</p>
+            <p>Selamat Datang di galeri seni kami menyediakan museum yang berisi lukisan dan patung. kami memiliki keamanan yang khusus yang di jaga ketat 24 jam. buka galeri seni pada hari setiap hari. buka pada pukul 9.30 - 21.30 WIB. dilarang merusak yang ada di dalam ruangan galeri seni.selamat berkunjung....</p>
         </section>
 
         <!-- Bagian Layanan -->
@@ -50,13 +50,11 @@
             <h2>Layanan Kami</h2>
             <div class="categories">
                 <article class="category">
-                    <h3>Turnamen Gratis</h3>
+                    <h3>menamba wawasan anda</h3>
                     <ul>
-                        <li>Mobile Legend</li>
-                        <li>PUBG</li>
-                        <li>Efootball 2024</li>
-                        <li>EA Sport</li>
-                        <li>Free Fire</li>
+                        <li>pelayanan yang baik</li>
+                        <li>lukisan bersejarah</li>
+                        <li>patung seniman</li>
                     </ul>
                 </article>
             </div>
@@ -66,7 +64,7 @@
 <section id="galeri" class="section">
     <h2>Galeri</h2>
     <div class="gallery-grid">
-        <img src="img/Kantor.jpg" alt="Gambar Galeri">
+        <img src="img/img/WhatsApp Image 2024-10-31 at 22.57.36.jpeg" alt="Gambar Galeri">
     </div>
 </section>
 
@@ -76,16 +74,16 @@
             <h2>Kontak Kami</h2>
             <p>Hubungi kami untuk informasi lebih lanjut.</p>
             <ul>
-                <li>Telepon: 0888-0625-1237</li>
-                <li>Email: subfrens@gmail.com</li>
-                <li>Alamat: Jl. Pattimura No. 35, Desa Blambangan, Kedungwuluh, Adipala, Indonesia</li>
+                <li>Telepon: 085262814213</li>
+                <li>Email: galeriseni.com</li>
+                <li>Alamat: Jl.Rebok Sokaraja Tengaha</li>
             </ul>
         </section>
     </main>
 
     <!-- Footer -->
     <footer>
-        <p>&copy; <span id="current-year"></span> Profil Perusahan GemTar. Hak Cipta Dilindungi.</p>
+        <p>&copy; <span id="current-year"></span> Profil galeri seni. Hak Cipta Dilindungi.</p>
     </footer>
 
     <script src="script.js"></script>
